# Wordle

./: .gitignore  .replit  LICENSE.txt  README.md  aidel.py  primel.py  pyproject.toml  requirements-3b1b.txt  requirements-extra.txt  requirements.txt  sim-3b1b.py  sim3b1b.py  wordle.py
data/britle/: all-words.txt  valid.txt  words.txt
src/: __init__.py  aidel.py  primel.py
