[tool.poetry]
name = "Pridel"
version = "1.0.5"
description = "Wordle and Primel and other variants on the commandline"
authors = ["AlexBlandin"]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
numpy = { version = "^1.26.2", optional = true }
tqdm = { version = "^4.66.1", optional = true }
rich = { version = "^13.7.0", optional = true }
scipy = { version = "^1.11.4", optional = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
indent-width = 2
target-version = "py310"
line-length = 160
preview = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["CPY", "TD003", "S311", "T201", "ANN401", "PLR2004", "W191", "E111", "E114", "E117", "E203", "D206", "D300", "Q000", "Q001", "Q002", "Q003", "COM812", "COM819", "ISC001", "ISC002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
use_parentheses = true
comment_prefix = " #"
multi_line_output = 3
force_grid_wrap = 0
reverse_sort = true
length_sort = true
line_length = 160
from_first = true
indent = "  "
