[project]
name = "Wordle"
description = "Wordle from the terminle... I mean terminal."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "AlexBlandin" }]
dependencies = ["colorama; platform_system == 'Windows'"]
dynamic = ["version"]

[project.optional-dependencies]
3b1b = ["tqdm", "numpy", "rich", "scipy"]
toml = ["pytomlpp"]
all = ["3b1b", "toml"]
lint = ["ruff"]
check = ["mypy"]
dev = ["all", "lint", "check"]

[project.urls]
Documentation = "https://github.com/alexblandin/Wordle#readme"
Issues = "https://github.com/alexblandin/Wordle/issues"
Source = "https://github.com/alexblandin/Wordle"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.envs.default]
dependencies = []
features = ["toml"]

[tool.hatch.envs.lint]
dependencies = ["lint"]
detached = true

[tool.hatch.envs.dev]
features = ["dev"]
post-install-commands = ["mypy --install-types --non-interactive src/mymodule"]

[tool.ruff]
indent-width = 2
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ERA",    # code comments actually help 
  "INP001", # useless before hatch
  "TD003",  # not using github to track todo/issues
  "S311",   # I know when to use secrets
  "T20",    # print is good, actually 
  "W191",   # ruff format
  "E111",   # ruff format
  "E114",   # ruff format
  "E117",   # ruff format
  "E203",   # ruff format
  "D206",   # ruff format
  "D212",   # ruff format
  "D300",   # ruff format
  "Q",      # ruff format
  "COM812", # ruff format
  "COM819", # ruff format
  "ISC001", # ruff format
  "ISC002", # ruff format
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false
